tests/tc/neg/obj01.js
/*@ id :: forall A. (<l>)/l |-> {a: A} => B */
function id(x) {
  return x.b;
}

